--- a/earthquake_challenge/static/css/style.css
+++ b/earthquake_challenge/static/css/style.css
@@ -6,3 +6,18 @@ body,
   padding: 0;
   margin: 0;
 }
+.legand i {
+  padding: 10px;
+  line-height: 18px;
+  color: #333333;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+}
+
+.legend i {
+  float: left;
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  opacity: 0.7;
+}
